--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Fruit Merge v1.08</title>
+<title>Fruit Merge v1.09</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 <style>
 :root{--bg:#FDF6E3;--bd:#657B83;--txt:#586E75;--acc:#2AA198;--font:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif}
 *{box-sizing:border-box;touch-action:none;-webkit-tap-highlight-color:transparent;user-select:none}
 body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color:var(--txt)}
 #ui{position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:10;display:flex;flex-direction:column;justify-content:space-between}
-.top{height:120px;padding:10px 15px;background:rgba(255,255,255,0.9);backdrop-filter:blur(5px);pointer-events:auto;border-bottom:2px solid var(--bd)}
+.top{height:115px;padding:8px 15px;background:rgba(255,255,255,0.92);backdrop-filter:blur(8px);pointer-events:auto;border-bottom:2px solid var(--bd)}
 .row{display:flex;justify-content:space-between;align-items:center}
-.score{font-size:20px;font-weight:800} .lbl{font-size:9px;opacity:.7;text-transform:uppercase}
-#next-box{width:42px;height:42px;border:2px dashed var(--bd);border-radius:50%;display:grid;place-items:center;font-size:24px;background:#fff}
-.bar{display:flex;justify-content:space-between;background:rgba(0,0,0,.08);padding:5px;border-radius:12px;margin-top:8px}
-.dot{width:14px;height:14px;border-radius:50%;background:rgba(0,0,0,0.1);display:grid;place-items:center;font-size:8px}
-.dot.on{transform:scale(1.2);background:#fff;box-shadow:0 0 5px rgba(0,0,0,0.2)}
-.bot{height:85px;background:rgba(255,255,255,0.95);border-top:2px solid var(--bd);display:flex;align-items:center;padding:0 15px;pointer-events:auto;justify-content:space-between;padding-bottom:env(safe-area-inset-bottom)}
+.score{font-size:22px;font-weight:900} .lbl{font-size:10px;font-weight:700;opacity:.6;text-transform:uppercase}
+#next-box{width:45px;height:45px;border:2px dashed var(--bd);border-radius:50%;display:grid;place-items:center;font-size:26px;background:#fff}
+.bar{display:flex;justify-content:space-between;background:rgba(0,0,0,.08);padding:5px;border-radius:12px;margin-top:5px}
+.dot{width:15px;height:15px;border-radius:50%;background:rgba(0,0,0,0.1);display:grid;place-items:center;font-size:9px}
+.dot.on{transform:scale(1.15);background:#fff;box-shadow:0 0 4px rgba(0,0,0,0.2)}
+.bot{height:90px;background:rgba(255,255,255,0.96);border-top:2px solid var(--bd);display:flex;align-items:center;padding:0 15px;pointer-events:auto;justify-content:space-between;padding-bottom:env(safe-area-inset-bottom)}
 .btn-grp{display:flex;gap:12px;align-items:center}
-.btn{background:0;border:0;font-size:22px;display:flex;flex-direction:column;align-items:center;opacity:.5;transition:0.2s}
-.btn.act{opacity:1;color:var(--acc);transform:scale(1.1)} .btn span{font-size:8px;font-weight:800}
-.divider{width:2px;height:35px;background:var(--bd);opacity:0.2}
-.modal{position:absolute;top:0;left:0;width:100%;height:100%;background:#0008;z-index:99;display:none;align-items:center;justify-content:center;pointer-events:auto}
+.btn{background:0;border:0;font-size:24px;display:flex;flex-direction:column;align-items:center;opacity:.5;transition:0.15s;cursor:pointer}
+.btn.act{opacity:1;color:var(--acc);transform:scale(1.1)} .btn span{font-size:9px;font-weight:800}
+.divider{width:2px;height:40px;background:var(--bd);opacity:0.3}
+.modal{position:absolute;top:0;left:0;width:100%;height:100%;background:#0009;z-index:99;display:none;align-items:center;justify-content:center;pointer-events:auto}
 .modal.open{display:flex}
-.card{background:#fff;width:90%;max-width:400px;height:75%;border-radius:20px;display:flex;flex-direction:column;overflow:hidden}
-.shop-body{flex:1;overflow-y:auto;padding:15px;background:#f9f9f9;touch-action:auto}
-.shop-body::-webkit-scrollbar{width:16px} .shop-body::-webkit-scrollbar-thumb{background:var(--bd);border-radius:8px;border:4px solid #f9f9f9}
-.grid{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-.item{border:1px solid #eee;border-radius:12px;padding:12px;text-align:center;background:#fff}
-.item.eq{border:3px solid var(--acc);background:#f0fdf4}
-.cat-title{font-size:10px;font-weight:900;padding:15px 0 5px;text-transform:uppercase;color:var(--acc);border-bottom:1px solid #eee;grid-column:span 2}
+.card{background:#fff;width:92%;max-width:420px;height:75%;border-radius:24px;display:flex;flex-direction:column;overflow:hidden}
+.shop-body{flex:1;overflow-y:scroll;padding:20px;background:#fcfcfc;touch-action:pan-y}
+.shop-body::-webkit-scrollbar{width:20px} .shop-body::-webkit-scrollbar-thumb{background:var(--bd);border-radius:10px;border:5px solid #fcfcfc}
+.grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+.item{border:1px solid #ddd;border-radius:15px;padding:15px;text-align:center;background:#fff;cursor:pointer}
+.item.eq{border:3px solid var(--acc);background:#f0fff4;box-shadow:inset 0 0 10px rgba(42,161,152,0.1)}
+.cat-title{font-size:11px;font-weight:900;padding:15px 0 5px;text-transform:uppercase;color:var(--acc);border-bottom:2px solid #eee;grid-column:span 2}
 </style>
 </head>
 <body>
@@ -42,7 +42,7 @@ body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color
             <div style="text-align:right"><div class="lbl">Wallet</div><div class="score" style="color:var(--acc)">💰<span id="val-wallet">0</span></div></div>
         </div>
         <div class="bar" id="prog"></div>
-        <div style="text-align:center;font-size:10px;margin-top:4px">BEST: <span id="sBest">0</span></div>
+        <div style="text-align:center;font-size:11px;margin-top:5px;font-weight:700">RECORD: <span id="sBest">0</span></div>
     </div>
     <div class="bot">
         <div class="btn-grp">
@@ -59,19 +59,20 @@ body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color
     </div>
 </div>
 
-<div class="modal" id="m-store"><div class="card"><div style="padding:15px;display:flex;justify-content:space-between;border-bottom:1px solid #eee"><b>Market</b><span onclick="toggleStore()" style="cursor:pointer;font-size:20px">✕</span></div><div class="shop-body" id="shop-container"></div></div></div>
-<div class="modal" id="m-info"><div class="card" style="height:auto;padding:25px">
-    <h3>Fruit Merge Guide</h3>
-    <p><b>Basics:</b> Drop items from the top. When two identical items touch, they merge into the next bigger tier. Reach the 12th tier to master the set!</p>
-    <p><b>The Death Line:</b> If items stack above the dashed red line for more than 2 seconds, it's Game Over.</p>
-    <hr>
-    <p><b>Power-Ups:</b> (Tap icon, then tap the board)
-    <br>💣 <b>Bomb:</b> Destroys all items within a medium radius of where you tap.
-    <br>🧹 <b>Broom:</b> Tap a fruit to wipe out every single fruit of that same tier on the screen.
-    <br>🪄 <b>Wand:</b> Tap a fruit to instantly evolve it to the next tier.</p>
-    <button class="btn" style="background:var(--acc);color:#fff;padding:12px;border-radius:10px;opacity:1;width:100%" onclick="toggleModal('m-info')">Got it!</button>
+<div class="modal" id="m-store"><div class="card"><div style="padding:18px;display:flex;justify-content:space-between;align-items:center;border-bottom:1px solid #eee"><b>Market</b><span onclick="toggleStore()" style="cursor:pointer;font-size:24px;padding:5px">✕</span></div><div class="shop-body" id="shop-container"></div></div></div>
+<div class="modal" id="m-info"><div class="card" style="height:auto;padding:30px">
+    <h3 style="margin-top:0">How to Play</h3>
+    <p>• <b>Drop:</b> Drag to aim, let go to drop the item.<br>• <b>Merge:</b> Touch two identical items to grow them!<br>• <b>Danger:</b> Don't let items stay above the <b>Red Line</b> for 2 seconds!</p>
+    <hr style="opacity:0.2">
+    <p><b>Power-Ups:</b><br>
+    1. Tap the power-up icon (it will glow).<br>
+    2. Tap a target on the game board.<br>
+    • 💣 <b>Bomb:</b> Clears a circular area.<br>
+    • 🧹 <b>Broom:</b> Deletes all items of the type you tap.<br>
+    • 🪄 <b>Wand:</b> Instantly levels up the item you tap.</p>
+    <button class="btn" style="background:var(--acc);color:#fff;padding:12px;border-radius:12px;opacity:1;width:100%" onclick="toggleModal('m-info')">Start Playing</button>
 </div></div>
-<div class="modal" id="m-over"><div style="text-align:center;color:#fff"><h1>GAME OVER</h1><button class="btn" style="background:#fff;color:#000;padding:10px 30px;border-radius:20px;opacity:1" onclick="reset()">Retry</button></div></div>
+<div class="modal" id="m-over"><div style="text-align:center;color:#fff"><h1>GAME OVER</h1><button class="btn" style="background:#fff;color:#000;padding:12px 40px;border-radius:24px;opacity:1" onclick="reset()">Retry</button></div></div>
 
 <script>
 const M=Matter, E=M.Engine, B=M.Bodies, C=M.Composite, Ev=M.Events, Q=M.Query;
@@ -80,8 +81,8 @@ const THEMES={'Mellow':'#FDF6E3','Matcha':'#E8F5E9','Midnight':'#1a1b26','Lavend
 const BORDERS={'Slate':'#657B83','Gold':'#DAA520','Red':'#DC143C','Neon':'#B026FF','Black':'#000000','White':'#FFFFFF','Grey':'#95A5A6','Blue':'#2980B9','Green':'#27AE60','Teal':'#16A085','Orange':'#E67E22','Pink':'#E91E63','Purple':'#8E44AD','Brown':'#795548','Mint':'#1ABC9C','Navy':'#2C3E50'};
 const COLORS=['#F00','#F70','#FF0','#0F0','#00F','#4B0','#940','#F14','#0CE','#FD7','#F45','#32C'];
 
-let st={s:0, w:parseInt(localStorage.getItem('f8_w')||0), h:parseInt(localStorage.getItem('f8_h')||0), inv:JSON.parse(localStorage.getItem('f8_i')||'["sk_Fruit","ot_def","th_Mellow","bd_Slate"]'), 
-    eq:JSON.parse(localStorage.getItem('f8_e')||'{"sk":"Fruit","ot":"def","th":"Mellow","bd":"Slate"}'), next:0, drag:0, x:0, y:0, drop:1, over:0, tool:null, max:-1};
+let st={s:0, w:parseInt(localStorage.getItem('f9_w')||0), h:parseInt(localStorage.getItem('f9_h')||0), inv:JSON.parse(localStorage.getItem('f9_i')||'["sk_Fruit","ot_def","th_Mellow","bd_Slate"]'), 
+    eq:JSON.parse(localStorage.getItem('f9_e')||'{"sk":"Fruit","ot":"def","th":"Mellow","bd":"Slate"}'), next:0, drag:0, x:0, y:0, drop:1, over:0, tool:null, max:-1};
 
 const cv=document.getElementById('c'), cx=cv.getContext('2d'), eng=E.create();
 let W, H;
@@ -91,10 +92,10 @@ function rsz(){
     cv.width=W*devicePixelRatio; cv.height=H*devicePixelRatio;
     cx.scale(devicePixelRatio,devicePixelRatio);
     C.clear(eng.world,0,1);
-    const t=250; 
-    const floor=B.rectangle(W/2,H-85+t/2,W,t,{isStatic:1,friction:0.6,label:'floor'});
-    const lw=B.rectangle(0,H/2,30,H*2,{isStatic:1});
-    const rw=B.rectangle(W,H/2,30,H*2,{isStatic:1});
+    const t=300; 
+    const floor=B.rectangle(W/2,H-90+t/2,W,t,{isStatic:1,friction:0.6,label:'floor'});
+    const lw=B.rectangle(0,H/2,35,H*2,{isStatic:1});
+    const rw=B.rectangle(W,H/2,35,H*2,{isStatic:1});
     C.add(eng.world,[floor,lw,rw]);
 }
 window.onresize=rsz; rsz();
@@ -105,7 +106,7 @@ Ev.on(eng,'collisionStart',e=>{
         if(a.tier!==undefined && b.tier!==undefined && a.tier===b.tier && a.tier<11){
             const n=a.tier+1, pos={x:(a.position.x+b.position.x)/2, y:(a.position.y+b.position.y)/2};
             C.remove(eng.world,[a,b]);
-            const nb=B.circle(pos.x,pos.y,10+(n*6),{restitution:0.3}); nb.tier=n; C.add(eng.world,nb);
+            const nb=B.circle(pos.x,pos.y,10+(n*6.5),{restitution:0.3, friction:0.2}); nb.tier=n; C.add(eng.world,nb);
             updSc((n+1)*10); updPrg(n);
         }
     });
@@ -114,27 +115,30 @@ Ev.on(eng,'collisionStart',e=>{
 function loop(){
     E.update(eng,16); cx.clearRect(0,0,W,H);
     document.body.style.background=THEMES[st.eq.th];
-    const dl=140; // High Death Line
-    cx.beginPath(); cx.moveTo(15,dl); cx.lineTo(W-15,dl); cx.strokeStyle='#F44'; cx.setLineDash([5,5]); cx.stroke(); cx.setLineDash([]);
-    cx.fillStyle=BORDERS[st.eq.bd]; cx.globalAlpha=0.6; cx.fillRect(0,0,15,H); cx.fillRect(W-15,0,15,H); cx.globalAlpha=1;
+    const dl=125; // Locked High Death Line
+    cx.beginPath(); cx.moveTo(15,dl); cx.lineTo(W-15,dl); cx.strokeStyle='#F44'; cx.setLineDash([6,6]); cx.lineWidth=2; cx.stroke(); cx.setLineDash([]);
+    
+    // Borders
+    cx.fillStyle=BORDERS[st.eq.bd]; cx.globalAlpha=0.7;
+    cx.fillRect(0,0,18,H); cx.fillRect(W-18,0,18,H); cx.globalAlpha=1;
 
     C.allBodies(eng.world).forEach(b=>{
         if(b.isStatic || b.tier===undefined) return;
-        if(b.position.y-b.circleRadius < dl && b.speed<0.5){ if(!b.tm) b.tm=Date.now(); if(Date.now()-b.tm>2000) over(); } else b.tm=null;
+        if(b.position.y-b.circleRadius < dl && b.speed<0.6){ if(!b.tm) b.tm=Date.now(); if(Date.now()-b.tm>2000) over(); } else b.tm=null;
         const r=b.circleRadius; cx.translate(b.position.x,b.position.y); cx.rotate(b.angle);
-        cx.shadowColor=COLORS[b.tier]; cx.shadowBlur=12; cx.fillStyle='#fff'; cx.beginPath(); cx.arc(0,0,r,0,6.28); cx.fill();
+        cx.shadowColor=COLORS[b.tier]; cx.shadowBlur=15; cx.fillStyle='#fff'; cx.beginPath(); cx.arc(0,0,r,0,6.28); cx.fill();
         cx.shadowBlur=0; 
-        if(st.eq.ot==='rainbow') cx.strokeStyle=`hsl(${Date.now()/5%360},100%,50%)`;
-        else cx.strokeStyle=st.eq.ot==='white'?'#fff':(st.eq.ot==='black'?'#000':'#0002');
-        cx.lineWidth=2; cx.stroke();
-        cx.font=`${r*1.4}px serif`; cx.textAlign='center'; cx.textBaseline='middle'; cx.fillStyle='#000'; cx.fillText(SKINS[st.eq.sk][b.tier],0,0);
+        if(st.eq.ot==='rainbow') cx.strokeStyle=`hsl(${Date.now()/4%360},100%,50%)`;
+        else cx.strokeStyle=st.eq.ot==='white'?'#fff':(st.eq.ot==='black'?'#000':'#0001');
+        cx.lineWidth=2.5; cx.stroke();
+        cx.font=`bold ${r*1.4}px serif`; cx.textAlign='center'; cx.textBaseline='middle'; cx.fillStyle='#000'; cx.fillText(SKINS[st.eq.sk][b.tier],0,0);
         cx.rotate(-b.angle); cx.translate(-b.position.x,-b.position.y);
     });
 
     if(st.drag && st.drop && !st.tool){
-        let gx=Math.max(35,Math.min(W-35,st.x));
-        cx.beginPath(); cx.moveTo(gx,dl-10); cx.lineTo(gx,H-85); cx.strokeStyle='#aaa'; cx.setLineDash([5,5]); cx.stroke();
-        cx.font="30px serif"; cx.globalAlpha=0.4; cx.fillText(SKINS[st.eq.sk][st.next],gx,dl-10); cx.globalAlpha=1;
+        let gx=Math.max(40,Math.min(W-40,st.x));
+        cx.beginPath(); cx.moveTo(gx,dl); cx.lineTo(gx,H-100); cx.strokeStyle='#bbb'; cx.setLineDash([4,4]); cx.stroke();
+        cx.font="35px serif"; cx.globalAlpha=0.5; cx.fillText(SKINS[st.eq.sk][st.next],gx,120); cx.globalAlpha=1;
     }
     if(!st.over) requestAnimationFrame(loop);
 }
@@ -150,23 +154,22 @@ function act(){
     let bs=C.allBodies(eng.world);
     if(st.tool){
         if(st.tool==='bomb'){ 
-            C.remove(eng.world, bs.filter(b=>!b.isStatic && b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y}))<100)); 
+            C.remove(eng.world, bs.filter(b=>!b.isStatic && b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y}))<110)); 
         } else {
-            // Wider detection for tools
-            let target=bs.find(b=>b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y})) < b.circleRadius+20);
+            let target=bs.find(b=>b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y})) < b.circleRadius+30);
             if(target){
                 if(st.tool==='broom') C.remove(eng.world, bs.filter(b=>b.tier===target.tier));
                 if(st.tool==='wand' && target.tier<11){
                     let t=target.tier, p=target.position; C.remove(eng.world, target);
-                    let nb=B.circle(p.x,p.y,10+((t+1)*6),{restitution:0.3}); nb.tier=t+1; C.add(eng.world,nb);
+                    let nb=B.circle(p.x,p.y,10+((t+1)*6.5),{restitution:0.3}); nb.tier=t+1; C.add(eng.world,nb);
                 }
             }
         }
         st.tool=null; document.querySelectorAll('.pwr').forEach(b=>b.classList.remove('act'));
-    } else if(st.drop && st.y > 120){
-        const b=B.circle(Math.max(35,Math.min(W-35,st.x)),140,10+(st.next*6),{restitution:0.3});
+    } else if(st.drop && st.y > 115){
+        const b=B.circle(Math.max(40,Math.min(W-40,st.x)),130,10+(st.next*6.5),{restitution:0.3});
         b.tier=st.next; C.add(eng.world,b);
-        st.next=Math.floor(Math.random()*5); updPre(); st.drop=0; setTimeout(()=>st.drop=1,500);
+        st.next=Math.floor(Math.random()*5); updPre(); st.drop=0; setTimeout(()=>st.drop=1,450);
     }
 }
 ['down','move','up'].forEach(e=>window.addEventListener('pointer'+e, x=>ptr(x,e[0])));
@@ -175,7 +178,7 @@ function updSc(n){ st.s+=n; st.w+=Math.floor(n/10); document.getElementById('sCu
 function updPrg(t){ if(t>st.max){st.max=t; renderPrg();} }
 function updPre(){ document.getElementById('next-box').innerText=SKINS[st.eq.sk][st.next]; }
 function renderPrg(){ const d=document.getElementById('prog'); d.innerHTML=''; for(let i=0;i<12;i++) d.innerHTML+=`<div class="dot ${i<=st.max?'on':''}" style="color:${COLORS[i]}">${i<=st.max?SKINS[st.eq.sk][i]:''}</div>`; }
-function save(){ localStorage.setItem('f8_i',JSON.stringify(st.inv)); localStorage.setItem('f8_e',JSON.stringify(st.eq)); localStorage.setItem('f8_h',st.h); localStorage.setItem('f8_w',st.w); }
+function save(){ localStorage.setItem('f9_i',JSON.stringify(st.inv)); localStorage.setItem('f9_e',JSON.stringify(st.eq)); localStorage.setItem('f9_h',st.h); localStorage.setItem('f9_w',st.w); }
 function toggleModal(id){ document.getElementById(id).classList.toggle('open'); }
 function reset(){ location.reload(); }
 function toggleFull(){ if(!document.fullscreenElement) document.documentElement.requestFullscreen(); else document.exitFullscreen(); }
@@ -196,10 +199,10 @@ function toggleStore(){
                 const own=st.inv.includes(i.id), eq=(st.eq.sk==i.v||st.eq.ot==i.v||st.eq.th==i.v||st.eq.bd==i.v);
                 let prv = i.n;
                 if(cat==='Skins') prv=SKINS[i.v][0];
-                if(cat==='Themes') prv=`<div style="width:24px;height:24px;background:${THEMES[i.v]};border-radius:50%;margin:0 auto;border:2px solid #ddd"></div>`;
-                if(cat==='Borders') prv=`<div style="width:24px;height:24px;background:${BORDERS[i.v]};border-radius:50%;margin:0 auto;border:2px solid #ddd"></div>`;
+                if(cat==='Themes') prv=`<div style="width:28px;height:28px;background:${THEMES[i.v]};border-radius:50%;margin:0 auto;border:2px solid #ccc"></div>`;
+                if(cat==='Borders') prv=`<div style="width:28px;height:28px;background:${BORDERS[i.v]};border-radius:50%;margin:0 auto;border:2px solid #ccc"></div>`;
                 const el=document.createElement('div'); el.className=`item ${eq?'eq':''}`;
-                el.innerHTML=`<div style="font-size:24px;margin-bottom:5px">${prv}</div><b>${i.n}</b><br><small>${eq?'Equipped':(own?'Owned':'$'+i.p)}</small>`;
+                el.innerHTML=`<div style="font-size:28px;margin-bottom:8px">${prv}</div><b>${i.n}</b><br><small>${eq?'Equipped':(own?'Owned':'$'+i.p)}</small>`;
                 el.onclick=()=>{
                     if(own){ 
                         if(cat==='Skins')st.eq.sk=i.v; if(cat==='Outlines')st.eq.ot=i.v; if(cat==='Themes')st.eq.th=i.v; if(cat==='Borders')st.eq.bd=i.v; 
