--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         :root { --accent: #2ecc71; --bg: #f0f0f0; }
         :root { --accent: #2ecc71; --bg: #f0f0f0; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; margin:0; padding:0; }
-        body { overflow: hidden; font-family: 'Arial Black', sans-serif; height: 100vh; width: 100vw; position: fixed; touch-action: none; background: var(--bg); padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); }
+        body { overflow: hidden; font-family: 'Arial Black', sans-serif; height: 100vh; width: 100vw; position: fixed; touch-action: none; background: var(--bg); }
         canvas { display: block; width: 100%; height: 100%; }
         .ui { position: absolute; z-index: 1000; pointer-events: none; width: 100%; }
-        .top-bar { top: env(safe-area-inset-top); background: rgba(255,255,255,0.95); border-bottom: 3px solid #333; pointer-events: auto; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; }
-        .bot-bar { bottom: 0; height: calc(90px + env(safe-area-inset-bottom)); background: rgba(255,255,255,0.95); border-top: 3px solid #333; pointer-events: auto; display: flex; align-items: center; justify-content: space-evenly; padding-bottom: env(safe-area-inset-bottom); }
-        .pwr-btn { width: 48px; height: 48px; border-radius: 12px; border: 2px solid #333; background: #fff; display: flex; align-items: center; justify-content: center; font-size: 20px; pointer-events: auto; position: relative; }
+        .top-bar { top: 0; padding-top: env(safe-area-inset-top); background: rgba(255,255,255,0.95); border-bottom: 3px solid #333; pointer-events: auto; padding-left: 20px; padding-right: 20px; padding-bottom: 10px; display: flex; justify-content: space-between; align-items: center; }
+        .bot-bar { bottom: 0; padding-bottom: env(safe-area-inset-bottom); height: auto; min-height: 90px; background: rgba(255,255,255,0.95); border-top: 3px solid #333; pointer-events: auto; display: flex; align-items: center; justify-content: space-evenly; }
+        .pwr-btn { width: 48px; height: 48px; border-radius: 12px; border: 2px solid #333; background: #fff; display: flex; align-items: center; justify-content: center; font-size: 20px; pointer-events: auto; position: relative; margin: 10px 0; }
         .pwr-btn::after { content: attr(data-p); position: absolute; bottom: -15px; font-size: 10px; color: #333; }
-        .modal { display: none; position: absolute; inset: 40px 20px; background: white; z-index: 2000; border-radius: 20px; border: 4px solid #333; flex-direction: column; pointer-events: auto; }
+        .modal { display: none; position: absolute; inset: 15px; margin-top: env(safe-area-inset-top); margin-bottom: env(safe-area-inset-bottom); background: white; z-index: 2000; border-radius: 20px; border: 4px solid #333; flex-direction: column; pointer-events: auto; }
         .modal.open { display: flex; }
         .modal-body { flex: 1; overflow-y: auto; padding: 15px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
         .card { border: 2px solid #eee; border-radius: 15px; padding: 10px; text-align: center; }
@@ -26,13 +26,13 @@
         .swatch { width: 40px; height: 40px; border-radius: 50%; margin: 0 auto 5px; border: 2px solid #333; display: flex; align-items: center; justify-content: center; animation: bounce 2s infinite; }
         @keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(-5px)} }
         #toast-layer { position: absolute; pointer-events: none; inset: 0; z-index: 1500; }
-        .floating-text { position: absolute; font-size: 32px; color: #e74c3c; text-shadow: 3px 3px 0px #fff; animation: up-out 1s forwards; font-family: 'Arial Black'; font-weight: 900; }
-        @keyframes up-out { 0% { transform: scale(0.5) rotate(-10deg); opacity: 0; } 50% { opacity: 1; transform: scale(1.2) rotate(5deg); } 100% { transform: translateY(-100px) scale(1) rotate(0deg); opacity: 0; } }
+        .floating-text { position: absolute; font-size: 32px; color: #ffeb3b; text-shadow: 3px 3px #e74c3c, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; animation: bounce-out 1s forwards; font-family: 'Arial Black', sans-serif; }
+        @keyframes bounce-out { 0% { transform: scale(0.5) rotate(-15deg); opacity: 0; } 50% { opacity: 1; transform: scale(1.2) rotate(10deg); } 100% { transform: translateY(-100px) scale(1) rotate(0deg); opacity: 0; } }
     </style>
 </head>
-<body>
-<div id="toast-layer"></div>
-<div id="game-over" style="display:none; position:absolute; inset:0; background:rgba(0,0,0,0.9); z-index:5000; color:white; flex-direction:column; align-items:center; justify-content:center;">
+    <body>
+    <div id="toast-layer"></div>
+    <div id="game-over" style="display:none; position:absolute; inset:0; background:rgba(0,0,0,0.9); z-index:5000; color:white; flex-direction:column; align-items:center; justify-content:center;">
     <h1>GAME OVER</h1><p>Score: <span id="gs">0</span> | Best: <span id="hs">0</span></p>
     <button onclick="restart()" style="margin-top:20px; padding:10px 30px; background:var(--accent); border:none; border-radius:10px; color:white;">RETRY</button>
 </div>
@@ -59,28 +59,28 @@
     <div class="modal-body" id="shop-content"></div>
 </div>
 <div id="help-mod" class="modal">
-    <div style="padding:15px; border-bottom:2px solid #eee; display:flex; justify-content:space-between"><b>GAME GUIDE</b><b onclick="toggleM('help-mod')">✕</b></div>
-    <div class="modal-body" style="display:block; line-height:1.4">
-        <p><b>Physics:</b> Hard skins (Space/Nature) are heavy; Soft skins (Animals/Dessert) bounce more.</p><br>
-        <p><b>Power-ups:</b> 💣 Bomb (Clear Area), 🧹 Wipe (Delete all of one type), 🪄 Evo (Upgrade target).</p><br>
-        <p><b>The Store:</b> Earn money by merging! High tiers = High rewards. Buy new skins, borders, and themes.</p><br>
-        <p><b>Home Screen:</b> On iPhone, tap the Share icon then 'Add to Home Screen' for a full-screen app experience!</p>
-        <button onclick="toggleM('help-mod')" style="margin-top:20px; width:100%; padding:15px; background:#333; color:#fff; border:none; border-radius:8px">LET'S PLAY</button>
+    <div style="padding:15px; border-bottom:2px solid #eee; font-weight:bold;">HELP & GAME GUIDE</div>
+    <div class="modal-body" style="display:block; line-height:1.5; font-size: 14px;">
+        <p><b>🎮 The Goal:</b> Merge identical items to reach the final Tier 12! Don't let items stack above the red line.</p><br>
+        <p><b>✨ Vibe-Logic:</b> Each skin has unique physics! <b>Space/Nature</b> are heavy/stable. <b>Animals/Dessert</b> are bouncy/unpredictable.</p><br>
+        <p><b>💣 Power-Ups:</b><br>• <b>Bomb:</b> Clears area.<br>• <b>Wipe:</b> Removes ALL items of a specific tier.<br>• <b>Evo:</b> Instantly upgrades one item.</p><br>
+        <p><b>💰 Store & Economy:</b> Earn cash by merging. Higher tiers + high combo multipliers = more $$$ for new Skins and Outlines!</p><br>
+        <p><b>📱 Fullscreen:</b> Tap 'Add to Home Screen' in your browser menu for a notch-safe, full-screen immersive experience.</p>
+        <button onclick="toggleM('help-mod')" style="margin-top:20px; width:100%; padding:15px; background:#333; color:#fff; border:none; border-radius:12px; font-weight:bold;">START PLAYING</button>
     </div>
-</div>
 </div>
 <canvas id="c"></canvas>
 
 <script>
 // SECTION: GAME CONFIGURATION & DATA CONSTANTS
 const M=Matter, E=M.Engine, B=M.Bodies, C=M.Composite;
-const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🥝"], Animals:["🐞","🐸","🐢","🦆","🐒","🦉","🐧","🐺","🦓","🦍","🐘","🐋"], Music:["🪕","🪗","🎸","🎹","🎺","🎻","🥁","🎷","🎙️","📻","🎧","🎵"], Weather:["☁️","🌦️","⛈️","🌩️","🌨️","❄️","🌬️","💨","🌪️","🌫️","🌈","☀️"], Space:["🌑","☄️","🛰️","🚀","🛸","👾","伸縮","🌌","🪐","☀️","🌀","👽"], Nature:["🌱","🌿","☘️","🍄","🍃","🍂","🍁","🌵","🌴","🌲","🌳","🌻"], Dessert:["🍬","🍪","🍩","🍫","🍮","🍦","🧁","🍰","🥧","🥞","🧇","🎂"], Shapes:["🔺","🟡","🟩","🔷","⭐","🛑","💎","🌙","🌀","💠","⬛","⚪"] };
-const T_COLORS = ["#5dade2", "#48c9b0", "#52be80", "#f4d03f", "#eb984e", "#e74c3c", "#af7ac5", "#5499c7", "#45b39d", "#58d68d", "#f5b041", "#f39c12"];
-const WORDS = { Fruit:["JUICY!","FRESH!"], Space:["SUPERNOVA!","GALACTIC!"], Animals:["WILD!","ROAR!"], Music:["GROOVY!","BEAT!"], Weather:["STORM!","FLASH!"], Nature:["EARTHY!","BLOOM!"], Dessert:["SWEET!","YUM!"], Shapes:["SHARP!","PERFECT!"] };
+const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🥝"], Animals:["🐞","🐸","🐢","🦆","🐒","🦉","🐧","🐺","🦓","🦍","🐘","🐋"], Music:["🪕","🪗","🎸","🎹","🎺","🎻","🥁","🎷","🎙️","📻","🎧","🎵"], Weather:["☁️","🌦️","⛈️","🌩️","🌨️","❄️","🌬️","💨","🌪️","🌫️","🌈","☀️"], Space:["🌑","☄️","🛰️","🚀","🛸","👾","🔭","🌌","🪐","☀️","🌀","👽"], Nature:["🌱","🌿","☘️","🍄","🍃","🍂","🍁","🌵","🌴","🌲","🌳","🌻"], Dessert:["🍬","🍪","🍩","🍫","🍮","🍦","🧁","🍰","🥧","🥞","🧇","🎂"], Shapes:["🔺","🟡","🟩","🔷","⭐","🛑","💎","🌙","🌀","💠","⬛","⚪"] };
+const WORDS = { Fruit:["JUICY!","FRESH!"], Space:["SUPERNOVA!","GALACTIC!"], Animals:["WILD!","ROAR!"], Music:["GROOVY!","BEAT!"], Weather:["STORM!","FLASH!"], Nature:["BLOOM!","EARTHY!"], Dessert:["SWEET!","YUM!"], Shapes:["SHARP!","PERFECT!"] };
 const THEMES = { Mellow:"#FDF6E3", Midnight:"#1a1b26", Matcha:"#E8F5E9", Lavender:"#F3E5F5", Sky:"#E1F5FE", Rose:"#FFF1F0" };
 const BORDERS = { Slate:"#657B83", Gold:"#DAA520", Neon:"#B026FF", Red:"#DC143C", Black:"#000000", Silver:"#C0C0C0" };
 const OUTLINES = { Default:"def", Rainbow:"rainbow", White:"white", Black:"black" };
 const SIZES = [18, 24, 30, 38, 46, 55, 65, 76, 88, 102, 118, 135];
+const TIER_COLORS = ["#3498db", "#2ecc71", "#f1c40f", "#e67e22", "#e74c3c", "#9b59b6", "#1abc9c", "#d35400", "#c0392b", "#8e44ad", "#27ae60", "#f39c12"];
 
 // SECTION: GAME STATE & CORE INITIALIZATION
 let st = { score:0, best:0, wallet:100, muted:false, eq:{sk:'Fruit', th:'Mellow', bd:'Slate', ot:'def'}, owned:['sk_Fruit', 'th_Mellow', 'bd_Slate', 'ot_def'], found:[0] };
@@ -120,8 +120,8 @@ function resize() {
 }
 
 function spawnF(x,y,t,isD) {
-    const hard = ['Space','Nature','Shapes'].includes(st.eq.sk)?0.2:['Animals','Dessert'].includes(st.eq.sk)?0.8:0.5;
-    const b=B.circle(x,y,SIZES[t],{restitution:hard, friction:0.02, plugin:{t:t}}); C.add(engine.world, b);
+    const hard = ['Space','Nature','Shapes'].includes(st.eq.sk)?{r:0.2,f:0.1}:['Animals','Dessert'].includes(st.eq.sk)?{r:0.8,f:0.01}:{r:0.5,f:0.02};
+    const b=B.circle(x,y,SIZES[t],{restitution:hard.r, friction:hard.f, plugin:{t:t}}); C.add(engine.world, b);
     if(isD){ curIdx=nextIdx; nextIdx=Math.floor(Math.random()*5); canDrop=false; setTimeout(()=>canDrop=true, 500); updUI(); }
     return b;
 }
@@ -154,7 +154,7 @@ function releaseP(x,y) {
 function loop() {
     if(!isPaused) E.update(engine, 16); ctx.clearRect(0,0,W,H); document.body.style.background=THEMES[st.eq.th];
     ctx.fillStyle=BORDERS[st.eq.bd]; ctx.fillRect(0,0,15,H); ctx.fillRect(W-15,0,15,H);
-    ctx.setLineDash([5,5]); ctx.strokeStyle="red"; ctx.beginPath(); ctx.moveTo(0,165); ctx.lineTo(W,165); ctx.stroke();
+    ctx.setLineDash([5,5]); ctx.strokeStyle="red"; ctx.beginPath(); ctx.moveTo(0,165); ctx.lineTo(W,165); ctx.stroke(); ctx.setLineDash([]);
     const now=Date.now();
     C.allBodies(engine.world).forEach(b => {
         if(!b.plugin) return;
@@ -162,18 +162,25 @@ function loop() {
         ctx.save(); ctx.translate(b.position.x, b.position.y); ctx.rotate(b.angle);
         if(b.sq>1) b.sq -= 0.05; ctx.scale(b.sq||1, b.sq||1);
         ctx.fillStyle="#fff"; ctx.beginPath(); ctx.arc(0,0,b.circleRadius,0,Math.PI*2); ctx.fill();
-        ctx.lineWidth=4; 
+        
         let dist = M.Vector.magnitude(M.Vector.sub(b.position, dragP));
-        if(activeP && dist < (activeP==='bomb'?80:25)) {
-            ctx.strokeStyle="#ffd700"; ctx.shadowBlur=15 + Math.sin(now/200)*5; ctx.shadowColor="#ffd700";
+        let isTarg = activeP && (activeP==='bomb'?dist<80:dist<SIZES[b.plugin.t]+10);
+        
+        if(isTarg) {
+            ctx.lineWidth = 6 + Math.sin(now/150)*2; ctx.strokeStyle = `rgba(255, 215, 0, ${0.5 + Math.sin(now/150)*0.5})`;
+            ctx.shadowBlur = 15; ctx.shadowColor = "gold";
         } else {
-            ctx.strokeStyle = T_COLORS[b.plugin.t]; ctx.shadowBlur=5; ctx.shadowColor=T_COLORS[b.plugin.t];
+            ctx.lineWidth = 4; ctx.shadowBlur = 8;
+            let ot = st.eq.ot;
+            if(ot==='def') { ctx.strokeStyle = TIER_COLORS[b.plugin.t]; ctx.shadowColor = TIER_COLORS[b.plugin.t]; }
+            else if(ot==='rainbow') { ctx.strokeStyle = `hsl(${now/10%360},100%,50%)`; ctx.shadowColor = `hsl(${now/10%360},100%,50%)`; }
+            else { ctx.strokeStyle = ot; ctx.shadowColor = ot; }
         }
         ctx.stroke(); ctx.font=`${b.circleRadius*1.2}px serif`; ctx.textAlign="center"; ctx.textBaseline="middle";
         ctx.fillText(SKINS[st.eq.sk][b.plugin.t], 0, 0); ctx.restore(); ctx.shadowBlur=0;
     });
     if(canDrop && !activeP && !isDead){ ctx.globalAlpha=0.4; ctx.font="40px serif"; ctx.textAlign="center"; ctx.fillText(SKINS[st.eq.sk][curIdx], lastX, 145); ctx.globalAlpha=1; }
-    if(activeP) { ctx.beginPath(); ctx.strokeStyle="#ffd700"; ctx.lineWidth=3; ctx.setLineDash([2,2]); ctx.arc(dragP.x, dragP.y, activeP==='bomb'?80:25, 0, Math.PI*2); ctx.stroke(); }
+    if(activeP) { ctx.beginPath(); ctx.strokeStyle="rgba(255,215,0,0.3)"; ctx.setLineDash([5,5]); ctx.arc(dragP.x, dragP.y, activeP==='bomb'?80:25, 0, Math.PI*2); ctx.stroke(); }
     if(isDead){ document.getElementById('game-over').style.display='flex'; document.getElementById('gs').innerText=st.score; document.getElementById('hs').innerText=st.best; }
     requestAnimationFrame(loop);
 }
@@ -182,7 +189,7 @@ function loop() {
 function renderS() {
     const cont=document.getElementById('shop-content'); cont.innerHTML='';
     document.getElementById('cash').innerText=st.wallet;
-    const cats=[{n:'Skins',k:'sk',d:SKINS,c:1500},{n:'Outlines',k:'ot',d:OUTLINES,c:2000},{n:'Themes',k:'th',d:THEMES,c:750},{n:'Borders',k:'bd',d:BORDERS,c:500}];
+    const cats=[{n:'Skins',k:'sk',d:SKINS,c:1500},{n:'Outlines',k:'ot',d:OUTLINES,c:2000},{n:'Backgrounds',k:'th',d:THEMES,c:750},{n:'Borders',k:'bd',d:BORDERS,c:500}];
     cats.forEach(cat=>{
         Object.keys(cat.d).forEach(k=>{
             const id=cat.k+'_'+k, val=(cat.k==='ot'?cat.d[k]:k), isE=st.eq[cat.k]===val, isO=st.owned.includes(id);
